--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Mobolaji Adesoye",
+	"description": "My backend project with freecodecamp",
 	"dependencies": {
 		"express": "^4.18.2"
 	},
