--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"dependencies": {
 		"express": "^4.18.2"
 	},
+	"version": "0.0.1",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
