--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"description": "My backend project with freecodecamp", 
 	"keywords": ["free code camp", "npm", "nodejs", "freecodecamp"],
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"@freecodecamp/example": "1.1.0"
 	},
 	"version": "1.0.0",
 	"main": "server.js",
