--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "My backend project with freecodecamp", 
 	"keywords": ["free code camp", "npm", "nodejs", "freecodecamp"],
 	"dependencies": {
-		"express": "^4.18.2",
+		"express": "^4.18.2"
 		
 	},
 	"version": "1.0.0",
